--- a/ODK.Web.Razor/wwwroot/css/_sections.scss
+++ b/ODK.Web.Razor/wwwroot/css/_sections.scss
@@ -36,6 +36,11 @@
   }    
 }
 
+.section--chapters {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .section--dark {
   background: rgba(37,33,33,.6);
 }
