--- a/ODK.Web.Razor/Pages/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Core.Countries
 @using ODK.Core.Chapters
 @using ODK.Web.Razor.Models.Components
+@using ODK.Web.Razor.Models.Home
 @model IndexModel
 @inject IChapterService ChapterService
 @{
@@ -18,6 +19,12 @@
 }
 
 <main>
+    @await Html.PartialAsync("Home/_ChaptersSection", new ChaptersSectionViewModel
+    {
+        Chapters = chapters,
+        Countries = countries
+    })
+
     <img class="img--hero" src="/assets/img/home-hero.jpg" />
     
     @await Html.PartialAsync("Components/_Section", new SectionViewModel
@@ -59,15 +66,15 @@
     <img class="img--hero" src="assets/img/home-timeline.png" />
     
     @await Html.PartialAsync("Components/_Section", new SectionViewModel
-{
-    Content = @<div>
-                 <div class="small">-</div>
-                 <div class="small">Warnings and Disclaimers:</div>
-                 <p>&nbsp;</p>
-                 <div class="small">1. You may have to unpick some knitting mistakes after attending a DK event; we suggest bringing simple projects to avoid this hassle.</div>
-                 <div class="small">2. We use the term "knit" roughly; if you prefer crochet, that's cool.</div>
-                 <div class="small">3. Drinking is optional; crafting is not.</div>
-             </div>,
+    {
+        Content = @<div>
+                     <div class="small">-</div>
+                     <div class="small">Warnings and Disclaimers:</div>
+                     <p>&nbsp;</p>
+                     <div class="small">1. You may have to unpick some knitting mistakes after attending a DK event; we suggest bringing simple projects to avoid this hassle.</div>
+                     <div class="small">2. We use the term "knit" roughly; if you prefer crochet, that's cool.</div>
+                     <div class="small">3. Drinking is optional; crafting is not.</div>
+                 </div>,
         Hero = true,
         Theme = "dark",
     })
