--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -4,7 +4,7 @@
 @model ODK.Web.Razor.Models.Header.NavbarViewModel
 @inject IRequestCache RequestCache
 @{
-    AccountMenuViewModel accountMenu = new AccountMenuViewModel
+    var accountMenu = new AccountMenuViewModel
     {
         CurrentChapter = Model.Chapter,
         Member = Model.Member,
@@ -13,7 +13,9 @@
             : null
     };
 
-    string id = Model.Id ?? "navbar-main";
+    var id = Model.Id ?? "navbar-main";
+
+    var menuGroups = Model.MenuItems;    
 }
 
 <nav class="navbar
@@ -24,47 +26,47 @@
             @(Model.Breakpoint == "md" ? "navbar-expand-md" : null)
             @(Model.Breakpoint == "lg" ? "navbar-expand-lg" : null)
             @(Model.Compact ? "navbar-compact" : null)">
-    <div class="position-relative nav-container
+    <div class="position-relative
                 @(Model.Fluid ? "container-fluid" : "container")">
         <div class="d-flex align-items-center">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#@id">
+            <button class="navbar-toggler @(Model.MenuItems.Length == 0 ? "invisible" : "")" 
+                type="button" data-bs-toggle="collapse" data-bs-target="#@id">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             @if (!Model.HideAccountMenu)
             {
-                @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
+                <div class="d-md-none">
+                    @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
+                </div>
             }
         </div>
 
-        @if (Model.MenuItems != null)
-        {
-            <div class="collapse navbar-collapse flex-column" id="@id">
-                @foreach (MenuItem[] group in Model.MenuItems)
-                {
-                    <ul class="navbar-nav">
-                        @foreach (MenuItem menuItem in group)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link"
-                                   data-menu-link="@(menuItem.ActiveIsExactMatch ? "exact" : null)"
-                                   href="@(menuItem.Link ?? menuItem.ExternalLink)"
-                                   target="@(!string.IsNullOrEmpty(menuItem.ExternalLink) ? "_blank" : null)">
-                                    @if (!string.IsNullOrEmpty(menuItem.Text))
-                                    {
-                                        <span>@menuItem.Text</span>
-                                    }
+        <div class="collapse navbar-collapse flex-column" id="@id">
+            @foreach (var group in menuGroups)
+            {
+                <ul class="navbar-nav">
+                    @foreach (var menuItem in group)
+                    {
+                        <li class="nav-item @(menuItem.Hidden ? "invisible" : null)">
+                            <a class="nav-link"
+                               data-menu-link="@(menuItem.ActiveIsExactMatch ? "exact" : null)"
+                               href="@(menuItem.Link ?? menuItem.ExternalLink)"
+                               target="@(!string.IsNullOrEmpty(menuItem.ExternalLink) ? "_blank" : null)">
+                                @if (!string.IsNullOrEmpty(menuItem.Text))
+                                {
+                                    <span>@menuItem.Text</span>
+                                }
 
-                                    @if (!string.IsNullOrEmpty(menuItem.Icon))
-                                    {
-                                        <i class="@menuItem.Icon"></i>
-                                    }
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                }
-            </div>
-        }
+                                @if (!string.IsNullOrEmpty(menuItem.Icon))
+                                {
+                                    <i class="@menuItem.Icon"></i>
+                                }
+                            </a>
+                        </li>
+                    }
+                </ul>
+            }
+        </div>
     </div>
 </nav>
