--- a/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Header.cshtml
@@ -1,17 +1,5 @@
-﻿@using ODK.Services.Caching
-@using ODK.Web.Razor.Models.Header
-@model ODK.Web.Razor.Models.Header.HeaderViewModel
-@inject IRequestCache RequestCache
-@{
-    var accountMenu = new AccountMenuViewModel
-    {
-        CurrentChapter = Model.Navbar.Chapter,
-        Member = Model.Navbar.Member,
-        MemberChapter = Model.Navbar.Member != null
-            ? Model.Navbar.Chapter?.Id == Model.Navbar.Member.ChapterId ? Model.Navbar.Chapter : await RequestCache.GetChapterAsync(Model.Navbar.Member.ChapterId)
-            : null
-    };
-}
+﻿@using ODK.Web.Razor.Models.Header
+@model HeaderViewModel
 
 <header>
     <div class="bg-dark text-center">
@@ -19,10 +7,6 @@
             <a href="@Model.ImageLink">
                 <img src="@Model.ImageUrl">            
             </a>
-
-            <div class="d-none d-md-block">
-                @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
-            </div>
         </div>
     </div>
     <div>
