(event admin): add default description

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -25,7 +25,8 @@
     {
         ChapterId = Model.Id,
         CurrentMemberId = memberId,
-        Date = nextEventDate.Value
+        Date = nextEventDate.Value,
+        Description = settings?.DefaultDescription
     })
     
     <button type="submit" class="btn btn-primary">Create</button>
