--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
@@ -20,6 +20,7 @@
     @await Html.PartialAsync("Admin/Events/_SettingsForm", new EventSettingsFormViewModel
     {
         DefaultDayOfWeek = settings?.DefaultDayOfWeek,
+        DefaultDescription = settings?.DefaultDescription,
         DefaultScheduledEmailDayOfWeek = settings?.DefaultScheduledEmailDayOfWeek,
         DefaultScheduledEmailTimeOfDay = settings?.DefaultScheduledEmailTimeOfDay
     })
