--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventForm.cshtml
@@ -42,7 +42,7 @@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.Description, new { @class = "form-label" })
-    @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
+    @Html.TextAreaFor(x => x.Description, new { @class = "form-control", rows = 8 })
 </div>
 
 <div class="form-group mb-3">
