Add theme selector

--- a/ODK.Web.Razor/Views/Shared/Footer/_Footer.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Footer/_Footer.cshtml
@@ -7,7 +7,7 @@
 }
 
 <footer>
-    <section class="section--footer bg-light">
+    <section class="section--footer">
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col container">
