--- a/ODK.Web.Razor/wwwroot/css/main.scss
+++ b/ODK.Web.Razor/wwwroot/css/main.scss
@@ -3,6 +3,7 @@
 @import "bootstrap/main";
 @import "_slim-select";
 
+@import "_variables";
 @import "_base";
 @import "_utils";
 
@@ -11,6 +12,7 @@
 @import "_buttons";
 @import "_cards";
 @import "_elements";
+@import "_footer";
 @import "_forms";
 @import "_header";
 @import "_icons";
