--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
     @await RenderSectionAsync("styles", required: false)
 </head>
-<body>
+<body data-theme-root>
     @await RenderSectionAsync("header")
 
     @RenderBody()
