--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -21,7 +21,7 @@
 <nav class="navbar
             @Model.CssClass
             @(Model.IsDark ? "navbar-dark bg-dark" : null)
-            @(Model.IsLight ? "navbar-light bg-light" : null)
+            @(Model.IsLight ? "navbar-light bg-light text-dark" : null)
             @(Model.Breakpoint == "sm" ? "navbar-expand-sm" : null)
             @(Model.Breakpoint == "md" ? "navbar-expand-md" : null)
             @(Model.Breakpoint == "lg" ? "navbar-expand-lg" : null)
@@ -34,10 +34,21 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            @if (!Model.HideAccountMenu)
-            {
-                @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
-            }
+            <div class="account-links-container d-flex" data-bs-theme="dark">
+                <button type="button" class="d-flex align-items-center text-light btn-icon d-none me-3" data-theme-selector="light"
+                    data-bs-toggle="tooltip" data-bs-title="Light mode">
+                    <i class="fa-solid fa-sun"></i>
+                </button>
+                <button type="button" class="d-flex align-items-center text-light btn-icon me-3" data-theme-selector="dark"
+                    data-bs-toggle="tooltip" data-bs-title="Dark mode">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
+
+                @if (!Model.HideAccountMenu)
+                {
+                    @await Html.PartialAsync("Header/_AccountMenu", accountMenu)
+                }
+            </div>            
         </div>
 
         <div class="collapse navbar-collapse flex-column" id="@id">
@@ -47,7 +58,7 @@
                     @foreach (var menuItem in group)
                     {
                         <li class="nav-item @(menuItem.Hidden ? "invisible" : null)">
-                            <a class="nav-link"
+                            <a class="nav-link @(Model.IsLight ? "text-dark" : "")"
                                data-menu-link="@(menuItem.ActiveIsExactMatch ? "exact" : null)"
                                href="@(menuItem.Link ?? menuItem.ExternalLink)"
                                target="@(!string.IsNullOrEmpty(menuItem.ExternalLink) ? "_blank" : null)">
