--- a/ODK.Web.Razor/wwwroot/css/_breadcrumb.scss
+++ b/ODK.Web.Razor/wwwroot/css/_breadcrumb.scss
@@ -1,5 +1,5 @@
 ﻿.breadcrumb {
-    background-color: #e9ecef;
+    background-color: var(--odk-bg-light);
     padding-top: .75rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
