--- a/ODK.Web.Razor/wwwroot/css/_navbar.scss
+++ b/ODK.Web.Razor/wwwroot/css/_navbar.scss
@@ -103,12 +103,14 @@ $navbar-dark-separator: rgba(255, 255, 255, .5);
     }
 }
 
+.account-links-container {
+    right: 0;
+    position: absolute;
+    padding: 1rem;
+}
+
 .account-links {
     cursor: pointer;
-    right: 0;
-  
-    position: absolute;
-    padding: 1rem; 
 
     .dropdown-menu {
         min-width: inherit;
@@ -133,7 +135,7 @@ $navbar-dark-separator: rgba(255, 255, 255, .5);
 
 .chapter {
   @include media-breakpoint-up(sm) {
-    .account-links {
+    .account-links-container {
       position: absolute;
     }
 
@@ -145,9 +147,7 @@ $navbar-dark-separator: rgba(255, 255, 255, .5);
 
 .anonymous-links {
     display: flex;
-    position: absolute;
-    right: $grid-gutter-width / 2;
-
+    
     .anonymous-link {
         padding-top: 0.1rem;
         padding-bottom: 0.1rem;
