Move theme selector into profile page

--- a/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
@@ -19,6 +19,18 @@
         <div>
             <a href="/@Model.Chapter.Name/Account/Delete">Delete my account</a>
         </div>
+        <div class="mt-3" data-theme-selector-container>
+            <button type="button" class="d-flex align-items-center btn btn-outline-light d-none me-3"
+                    data-theme-selector="light">
+                <i class="fa-solid fa-sun me-2"></i>
+                <span>Light mode</span>
+            </button>
+            <button type="button" class="d-flex align-items-center btn btn-outline-dark me-3"
+                    data-theme-selector="dark">
+                <i class="fa-solid fa-moon me-2"></i>
+                <span>Dark mode</span>
+            </button>
+        </div>
     </div>
 
     <div class="col">
