--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
@@ -13,7 +13,7 @@
     <tbody>
         <tr>
             <td>Time</td>
-            <td>@error.CreatedDate.ToString("dd/MM/yyyy HH:mm:ss")</td>
+            <td>@error.CreatedUtc.ToString("dd/MM/yyyy HH:mm:ss")</td>
         </tr>
         <tr>
             <td>Message</td>
