--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
@@ -11,7 +11,7 @@
     {
         ChapterId = Model.Chapter.Id,
         CurrentMemberId = Model.CurrentMember.Id,
-        Date = Model.Event.DateUtc,
+        Date = Model.Event.Date,
         Description = Model.Event.Description,
         ImageUrl = Model.Event.ImageUrl,
         Name = Model.Event.Name,
