--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -29,7 +29,7 @@
             <td>
                 <a href="/@Model.Name/Admin/SuperAdmin/Features/@feature.Id">@feature.Name</a>
             </td>
-            <td>@feature.Created.ToString("yyyy-MM-dd")</td>
+            <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
         </tr>
     }
     </tbody>
