--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventsContent.cshtml
@@ -50,13 +50,13 @@
 
         <tr>
             <td><a href="/@Model.Name/Admin/Events/@(@event.Id)">@(@event.Name)</a></td>
-            <td>@(@event.DateUtc.EventDate())</td>
+            <td>@(@event.Date.EventDate())</td>
             <td><a href="/@Model.Name/Admin/Venues/@venue.Id">@venue.Name</a></td>
             <td>
-                @if (eventInvites?.SentDate == null)
+                @if (eventInvites?.SentUtc == null)
                 {
                     <a href="/@Model.Name/Admin/Events/@(@event.Id)/Invites">
-                        @(eventInvites?.ScheduledDate != null ? "Scheduled" : "Send")
+                        @(eventInvites?.ScheduledUtc != null ? "Scheduled" : "Send")
                     </a>
                 }
                 else
