--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12238,23 +12238,23 @@ footer {
   margin-top: 1px; /* vertical margin if tabs overflow */
 }
 .nav-tabs .nav-link {
-  background-color: #f8f9fa;
-  border: var(--bs-border-width) solid #dee2e6;
+  background-color: transparent;
+  border: var(--bs-border-width) solid var(--bs-border-color);
   border-bottom-color: transparent;
   border-radius: 0;
-  color: #212529;
+  color: var(--bs-body-color);
   margin-right: 0.2rem;
 }
 .nav-tabs .nav-link:hover {
-  border-top-color: #dee2e6;
+  border-bottom-color: transparent;
 }
 .nav-tabs .nav-link.active {
-  background-color: #fff;
-  border-bottom-color: #fff;
-  border-top-color: #2370c1;
+  background-color: var(--bs-nav-tabs-link-active-bg);
+  border-bottom-color: transparent;
+  border-top-color: var(--bs-primary);
   cursor: default;
 }
-.nav-tabs .nav-link:hover, .nav-tabs .nav-link.active {
+.nav-tabs .nav-link.active {
   border-top-width: 2px;
 }
 
