Datepicker dark mode styling

--- a/ODK.Web.Razor/wwwroot/css/main.scss
+++ b/ODK.Web.Razor/wwwroot/css/main.scss
@@ -11,6 +11,7 @@
 @import "_breadcrumb";
 @import "_buttons";
 @import "_cards";
+@import "_datepicker";
 @import "_elements";
 @import "_footer";
 @import "_forms";
