--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -11943,6 +11943,33 @@ textarea.form-control-lg {
   padding-right: 0.5rem;
 }
 
+:root {
+  --odk-datepicker-bg: var(--bs-body-bg);
+  --odk-datepicker-bg-hover: #e6e6e6;
+}
+
+[data-bs-theme=dark] {
+  --odk-datepicker-bg: var(--bs-body-bg);
+  --odk-datepicker-bg-hover: #383f45;
+}
+
+.datepicker {
+  border: 1px solid var(--bs-border-color);
+}
+
+.datepicker-picker,
+.datepicker-cell.focused:not(.selected),
+.datepicker-header .datepicker-controls .button {
+  background-color: var(--odk-datepicker-bg);
+  color: var(--bs-body-color);
+}
+
+.datepicker-cell:not(.selected):hover,
+.datepicker-cell.focused:not(.selected):hover,
+.datepicker-header .datepicker-controls .button:hover {
+  background-color: var(--odk-datepicker-bg-hover) !important;
+}
+
 img {
   max-width: 100%;
 }
