(events): add event comments

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_SettingsContent.cshtml
@@ -22,7 +22,8 @@
         DefaultDayOfWeek = settings?.DefaultDayOfWeek,
         DefaultDescription = settings?.DefaultDescription,
         DefaultScheduledEmailDayOfWeek = settings?.DefaultScheduledEmailDayOfWeek,
-        DefaultScheduledEmailTimeOfDay = settings?.DefaultScheduledEmailTimeOfDay
+        DefaultScheduledEmailTimeOfDay = settings?.DefaultScheduledEmailTimeOfDay,
+        DisableComments = settings?.DisableComments ?? false
     })
     <button class="btn btn-primary">Update</button>
 </form>
